--- a/template/base.html
+++ b/template/base.html
@@ -8,7 +8,7 @@
 
     <title>
       <%block name="title">
-        ${ confname }
+        ${ conf_name }
       </%block>
     </title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -16,26 +16,29 @@
   <body>
     <div class="container">
       <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <a href="${base_dir}/index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
           <img class="bi me-2" height="32" src="images/pact-logo.png">
-          <span class="fs-4">${ confname }</span>
+          <span class="fs-4">${conf_name}</span>
+          <span class="fs-6 text-muted">&nbsp;&nbsp;${conf_dates}</span>
         </a>
 
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="/submit.html" class="nav-link">Submit</a></li>
-          <li class="nav-item"><a href="/program.html" class="nav-link">Program</a></li>
-          <li class="nav-item"><a href="/faq.html" class="nav-link">FAQs</a></li>
-          <li class="nav-item"><a href="/org.html" class="nav-link">Organization</a></li>
-          <li class="nav-item"><a href="/about.html" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="${base_dir}/index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="${base_dir}/submit.html" class="nav-link">Submit</a></li>
+          <li class="nav-item"><a href="${base_dir}/program.html" class="nav-link">Program</a></li>
+          <li class="nav-item"><a href="${base_dir}/faq.html" class="nav-link">FAQs</a></li>
+          <li class="nav-item"><a href="${base_dir}/org.html" class="nav-link">Organization</a></li>
+          <li class="nav-item"><a href="${base_dir}/about.html" class="nav-link">About</a></li>
         </ul>
       </header>
       <main>
+        <%block name="hero">
+        </%block>
         <%block name="main">
         </%block>
       </main>
       <footer class="pt-5 my-5 text-muted border-top">
-        &copy; The ${confname} organizers
+        &copy; The ${conf_name} organizers
       </footer>
     </div>
   </body>
