--- a/template/base.html
+++ b/template/base.html
@@ -7,19 +7,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>
-      <%block name="title">
-        ${ conf_name }
-      </%block>
+      {% block title %}
+        {{ conf_name }}
+      {% endblock %}
     </title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
       <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-        <a href="${base_dir}/index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <a href="{{base_dir}}/index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
           <img class="bi me-2" height="32" src="images/pact-logo.png">
-          <span class="fs-4">${conf_name}</span>
-          <span class="fs-6 text-muted">&nbsp;&nbsp;${conf_dates}</span>
+          <span class="fs-4">{{conf_name}}</span>
+          <span class="fs-6 text-muted">&nbsp;&nbsp;{{conf_dates}}</span>
         </a>
 
         <ul class="nav nav-pills">
@@ -32,13 +32,13 @@
         </ul>
       </header>
       <main>
-        <%block name="hero">
-        </%block>
-        <%block name="main">
-        </%block>
+        {% block hero %}
+        {% endblock %}
+        {% block main %}
+        {% endblock %}
       </main>
       <footer class="pt-5 my-5 text-muted border-top">
-        &copy; The ${conf_name} organizers
+        &copy; The {{conf_name}} organizers
       </footer>
     </div>
   </body>
