Add society sponsors

--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -57,13 +57,25 @@
 
         ### Sponsors
 
+        {#
         #### Supporters
+        #}
 
+        ![ACM SIGARCH](images/acm-sigarch-logo.png)
+
+        ![IEEE Computer Society](images/ieee-cs-logo.png)
+
+        ![IFIP](images/ifip-logo.png)
+
+
+        {#
         #### Gold
 
         #### Bronze
 
         #### Academic
+
+        #}
 
       {% endfilter %}
     </div>
