--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -13,7 +13,7 @@
         **Conference Papers:**
 
         - Abstracts: April 18, 2022
-        - Full Papers: **April 25, 2022**
+        - **Full Papers: April 25, 2022**
         - Round 1 Rebuttal: June 6&ndash;9, 2022
         - Round 2 Rebuttal: July 11&ndash;14, 2022
         - Author Notification: July 29, 2022
@@ -24,6 +24,9 @@
 
         - Submission Deadline: **TBD**
         - Notification: **TBD**
+        - Workshops/Tutorials: October 8&ndash;9, 2022
+
+        **Conference: {{conf_dates}}**
 
         ---
 
@@ -57,9 +60,7 @@
 
         ### Sponsors
 
-        {#
         #### Supporters
-        #}
 
         ![ACM SIGARCH](images/acm-sigarch-logo.png)
 
@@ -72,10 +73,11 @@
         #### Gold
 
         #### Bronze
+        #}
 
         #### Academic
 
-        #}
+        [![CS@Illinois](images-generated/illinois-wordmark.png)](https://cs.illinois.edu)
 
       {% endfilter %}
     </div>
