--- a/template/base.html
+++ b/template/base.html
@@ -39,8 +39,8 @@
           {{ nav_item("submit.html", "Submit") }}
           {{ nav_item("attend.html", "Attend") }}
           {{ nav_item("program.html", "Program") }}
-          {{ nav_item("org.html", "Organization") }}
-          {{ nav_item("about.html", "About") }}
+          {{ nav_item("workshops.html", "Workshops/Tutorials") }}
+          {{ nav_item("organization.html", "Organization") }}
         </ul>
       </header>
       <main>
@@ -50,7 +50,7 @@
         {% endblock %}
       </main>
       <footer class="pt-5 my-5 text-muted border-top">
-        &copy; The {{conf_name}} Organizers
+        &copy; {{conf_name}} Organizers
       </footer>
     </div>
   </body>
