Add link to repo

--- a/template/base.html
+++ b/template/base.html
@@ -51,6 +51,9 @@
       </main>
       <footer class="pt-5 my-5 text-muted border-top">
         &copy; {{conf_name}} Organizers
+        &middot;
+        <a href="https://github.com/pact-2022/pact-2022.github.io">
+          Edit or suggest changes to this web site</a>
       </footer>
     </div>
   </body>
