Add Argonne as a sponsor

--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -79,6 +79,8 @@
 
         [![CS@Illinois](images-generated/illinois-wordmark.png)](https://cs.illinois.edu)
 
+        [![Argonne National Laboratory](images/argonne-logo-300px.png)](https://alcf.anl.gov)
+
       {% endfilter %}
     </div>
   </div>
