Centralize deadline info

--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -13,7 +13,7 @@
         **Conference Papers:**
 
         - Abstracts: April 18, 2022
-        - **Full Papers: April 25, 2022**
+        - **Full Papers: {{ submission_deadline }}**
         - Round 1 Rebuttal: June 6&ndash;9, 2022
         - Round 2 Rebuttal: July 11&ndash;14, 2022
         - Author Notification: July 29, 2022
@@ -22,8 +22,8 @@
 
         **Workshops and Tutorials:**
 
-        - Submission Deadline: **TBD**
-        - Notification: **TBD**
+        - Submission Deadline: **TBA**
+        - Notification: **TBA**
         - Workshops/Tutorials: October 8&ndash;9, 2022
 
         **Conference: {{conf_dates}}**
