--- a/template/base.html
+++ b/template/base.html
@@ -14,7 +14,7 @@
 
     <title>
       {% block title %}
-        {{ conf_name }}
+        {{ conf_name }} &mdash; {{ conf_dates }}
       {% endblock %}
     </title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
