Add IEEE TCPP sponsor logo

--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -68,6 +68,7 @@
 
         ![IFIP](images/ifip-logo.png)
 
+        ![IEEE Computer Society](images-generated/ieee-tcpp-logo-300px.png)
 
         {#
         #### Gold
