Add IEEE TCPP/TCCA links

--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -66,9 +66,12 @@
 
         ![IEEE Computer Society](images/ieee-cs-logo.png)
 
-        ![IFIP](images/ifip-logo.png)
+        <div class="text-muted" markdown="1">
+        - [Technical Committee on Parallel Processing](https://tc.computer.org/tcpp/)
+        - [Technical Committee on Computer Architecture](https://ieeetcca.org/)
+        </div>
 
-        ![IEEE Computer Society](images-generated/ieee-tcpp-logo-300px.png)
+        ![IFIP](images/ifip-logo.png)
 
         {#
         #### Gold
