Post call for tutorials/workshops

--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -22,8 +22,8 @@
 
         **Workshops and Tutorials:**
 
-        - Submission Deadline: **TBA**
-        - Notification: **TBA**
+        - Submission Deadline: May 2, 2022
+        - Notification: May 9, 2022
         - Workshops/Tutorials: October 8&ndash;9, 2022
 
         **Conference: {{conf_dates}}**
