Main paper deadline is past

--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -12,8 +12,8 @@
 
         **Conference Papers:**
 
-        - Abstracts: April 18, 2022
-        - **Full Papers: {{ submission_deadline }}**
+        - <del>Abstracts: April 18, 2022</del>
+        - **<del>Full Papers: {{ submission_deadline }}</del>**
         - Round 1 Rebuttal: June 6&ndash;9, 2022
         - Round 2 Rebuttal: July 11&ndash;14, 2022
         - Author Notification: July 29, 2022
@@ -22,7 +22,7 @@
 
         **Workshops and Tutorials:**
 
-        - Submission Deadline: May 2, 2022
+        - <del>Submission Deadline: May 2, 2022</del>
         - Notification: May 9, 2022
         - Workshops/Tutorials: October 8&ndash;9, 2022
 
