--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -30,29 +30,40 @@
 
         ### Previous PACTs
 
-        [PACT21](http://pact21.snu.ac.kr/),
-        [PACT20](https://pact20.cc.gatech.edu/),
-        [PACT19](https://hpc.pnl.gov/pact19/),
-        [PACT18](http://www.cs.ucy.ac.cy/conferences/pact2018/),
-        [PACT17](https://parasol.tamu.edu/pact17/),
-        PACT16,
-        [PACT15](https://sites.google.com/a/lbl.gov/pact2015/),
-        [PACT14](http://pact2014.pactconf.org/),
-        [PACT13](http://conferences.inf.ed.ac.uk/pact2013/),
-        [PACT12](http://pact2012.ece.northwestern.edu/index.html),
-        [PACT11](https://parasol.tamu.edu/pact11/),
-        [PACT10](http://www.complang.tuwien.ac.at/PACT-2010/),
-        [PACT09](http://pact09.renci.org/),
-        [PACT08](http://www.eecg.toronto.edu/pact/),
-        [PACT07](http://pact07.cs.tamu.edu/),
-        [PACT06](http://www.cs.virginia.edu/~pact2006/),
-        [PACT05](http://pact05.ce.ucsc.edu/),
-        [PACT04](https://home.mis.u-picardie.fr/~cerin/pact/),
-        [PACT03](https://www.ccis.northeastern.edu/pact03/),
-        [PACT02](http://moss.csc.ncsu.edu/pact02/),
-        [PACT01](http://research.ac.upc.es/pact01/),
-        [PACT00](http://eecs.oregonstate.edu/pact2000/),
-        [PACT99](http://www.cs.ucy.ac.cy/~pact99/)
+        - [PACT21](http://pact21.snu.ac.kr/)
+          ([proceedings](https://ieeexplore.ieee.org/xpl/conhome/9563009/proceeding))
+        - [PACT20](https://pact20.cc.gatech.edu/)
+          ([proceedings](https://dl.acm.org/doi/proceedings/10.1145/3410463))
+        - [PACT19](https://hpc.pnl.gov/pact19/)
+          ([proceedings](https://ieeexplore.ieee.org/xpl/conhome/8890589/proceeding))
+        - [PACT18](http://www.cs.ucy.ac.cy/conferences/pact2018/)
+          ([proceedings](https://dl.acm.org/doi/proceedings/10.1145/3243176))
+        - [PACT17](https://parasol.tamu.edu/pact17/)
+          ([proceedings](https://www.computer.org/csdl/proceedings/pact/2017/12OmNwbcJ4M))
+        - PACT16
+          ([proceedings](https://dl.acm.org/doi/proceedings/10.1145/2967938)),
+        - [PACT15](https://sites.google.com/a/lbl.gov/pact2015/)
+          ([proceedings](https://ieeexplore.ieee.org/xpl/conhome/7425426/proceeding))
+        - [PACT14](http://pact2014.pactconf.org/)
+          ([proceedings](https://dl.acm.org/doi/proceedings/10.1145/2628071))
+        <details markdown="1">
+        <summary>Earlier PACTs</summary>
+        - [PACT13](http://conferences.inf.ed.ac.uk/pact2013/)
+        - [PACT12](http://pact2012.ece.northwestern.edu/index.html)
+        - [PACT11](https://parasol.tamu.edu/pact11/)
+        - [PACT10](http://www.complang.tuwien.ac.at/PACT-2010/)
+        - [PACT09](http://pact09.renci.org/)
+        - [PACT08](http://www.eecg.toronto.edu/pact/)
+        - [PACT07](http://pact07.cs.tamu.edu/)
+        - [PACT06](http://www.cs.virginia.edu/~pact2006/)
+        - [PACT05](http://pact05.ce.ucsc.edu/)
+        - [PACT04](https://home.mis.u-picardie.fr/~cerin/pact/)
+        - [PACT03](https://www.ccis.northeastern.edu/pact03/)
+        - [PACT02](http://moss.csc.ncsu.edu/pact02/)
+        - [PACT01](http://research.ac.upc.es/pact01/)
+        - [PACT00](http://eecs.oregonstate.edu/pact2000/)
+        - [PACT99](http://www.cs.ucy.ac.cy/~pact99/)
+        </details>
 
         ---
 
