Remove ANL logo for the time being

--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -92,7 +92,7 @@
 
         [![CS@Illinois](images-generated/illinois-wordmark.png)](https://cs.illinois.edu)
 
-        [![Argonne National Laboratory](images/argonne-logo-300px.png)](https://alcf.anl.gov)
+        Supported by [Argonne National Laboratory](https://alcf.anl.gov).
 
       {% endfilter %}
     </div>
