Add Huawei sponsorship

--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -69,6 +69,9 @@
 
         ### Sponsors
 
+        #### Gold
+        ![Huawei](images-generated/huawei.png)
+
         #### Supporters
 
         ![ACM SIGARCH](images/acm-sigarch-logo.png)
@@ -81,12 +84,6 @@
         </div>
 
         ![IFIP](images/ifip-logo.png)
-
-        {#
-        #### Gold
-
-        #### Bronze
-        #}
 
         #### Academic
 
