Expire dates, add poster dates in sidebar

--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -14,11 +14,18 @@
 
         - <del>Abstracts: April 18, 2022</del>
         - **<del>Full Papers: {{ submission_deadline }}</del>**
-        - Round 1 Rebuttal: June 6&ndash;9, 2022
-        - Round 2 Rebuttal: July 11&ndash;14, 2022
-        - Author Notification: July 29, 2022
-        - Artifact Submission: August 5, 2022
+        - <del>Round 1 Rebuttal: June 6&ndash;9, 2022</del>
+        - <del>Round 2 Rebuttal: July 11&ndash;14, 2022</del>
+        - <del>Author Notification: July 29, 2022</del>
         - Camera Ready Papers: August 26, 2022
+        {# - Artifact Submission: August 5, 2022 #}
+
+        **Posters:**
+
+        - Poster Submission Deadline: September 1, 2022
+        - Author Notification: September 15, 2022
+        - Extended Abstract: September 29, 2022
+        - Poster Session: October 10, 2022
 
         **Workshops and Tutorials:**
 
