First version of SRC pages

--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -27,6 +27,13 @@
         - Extended Abstract: September 29, 2022
         - Poster Session: October 10, 2022
 
+        **[ACM Student Research Competition](./src.html):**
+
+        - Abstract Submission Deadline: September 1, 2022
+        - Author Notification: September 15, 2022
+        - SRC Poster Session: October 11, 2022
+        - SRC Finalist Presentations: October 12, 2022
+
         **Workshops and Tutorials:**
 
         - Workshops/Tutorials: October 8&ndash;9, 2022
