--- a/template/base.html
+++ b/template/base.html
@@ -46,6 +46,7 @@
           {{ nav_item("attend.html", "Attend") }}
           {{ nav_item("program.html", "Program") }}
           {{ nav_item("workshops.html", "Workshops/Tutorials") }}
+          {{ nav_item("src.html", "ACM SRC") }}
           {{ nav_item("organization.html", "Organization") }}
         </ul>
       </header>
