--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -22,14 +22,14 @@
 
         **Posters:**
 
-        - Poster Submission Deadline: September 1, 2022
+        - <del>Poster Submission Deadline: September 1, 2022</del>
         - Author Notification: September 15, 2022
         - Extended Abstract: September 29, 2022
         - Poster Session: October 10, 2022
 
         **[ACM Student Research Competition](./src.html):**
 
-        - Abstract Submission Deadline: September 8, 2022
+        - <del>Abstract Submission Deadline: September 8, 2022</del>
         - Author Notification: September 16, 2022
         - SRC Poster Session: October 11, 2022
         - SRC Finalist Presentations: October 12, 2022
