--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -23,16 +23,20 @@
         **Posters:**
 
         - <del>Poster Submission Deadline: September 1, 2022</del>
-        - Author Notification: September 15, 2022
+        - <del>Author Notification: September 15, 2022</del>
         - Extended Abstract: September 29, 2022
         - Poster Session: October 10, 2022
 
         **[ACM Student Research Competition](./src.html):**
 
         - <del>Abstract Submission Deadline: September 8, 2022</del>
-        - Author Notification: September 16, 2022
+        - <del>Author Notification: September 16, 2022</del>
         - SRC Poster Session: October 11, 2022
         - SRC Finalist Presentations: October 12, 2022
+
+        **[Student Travel Awards](attend.html#travel-awards):**
+
+        - Application Deadline: October 5, 2022
 
         **Workshops and Tutorials:**
 
