Add Qualcomm as platinum sponsor

--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -87,7 +87,12 @@
 
         ### Sponsors
 
+        #### Platinum
+
+        ![Qualcomm](images-generated/qualcomm.png)
+
         #### Gold
+
         ![Huawei](images-generated/huawei.png)
 
         #### Supporters
