--- a/macros.jinja
+++ b/macros.jinja
@@ -1,3 +1,21 @@
+{% macro prog_nav() %}
+{% filter markdown %}
+  - [October 8: Tutorials and Workshops Day 1](tutorials.html#tut0)
+  - [October 9: Tutorials and Workshops Day 2](tutorials.html#tut1)
+  - [October 10: Main Conference Day 1](program.html#main0)
+  - [October 11: Main Conference Day 2](program.html#main1)
+  - [October 12: Main Conference Day 3](program.html#main2)
+
+  🚧 *Please be aware that the program shown here is provisional and still
+  subject to change.* 🚧
+
+  - **DPI** below refers to the **Discovery Partners Institute**, on
+    the fourth floor of 200 S. Wacker Drive, Chicago, IL.
+  - **IC** below refers to the **Illini Center**, on the 19th
+    floor of 200 S. Wacker Drive, Chicago, IL.
+{% endfilter %}
+{% endmacro %}
+
 {% macro prog_item(start, end, what, where) %}
 <tr>
   <td>{{ start }}&ndash;{{ end }}</td>
@@ -6,18 +24,179 @@
 </tr>
 {% endmacro %}
 
-{% macro prog_nav() %}
-- [October 8: Tutorials and Workshops Day 1](tutorials.html#tut0)
-- [October 9: Tutorials and Workshops Day 2](tutorials.html#tut1)
-- [October 10: Main Conference Day 1](program.html#main0)
-- [October 11: Main Conference Day 2](program.html#main1)
-- [October 12: Main Conference Day 3](program.html#main2)
+{% macro food(start, end, what, where="Discovery Room, DPI") %}
+  {{ prog_item(start, end, what, where) | indent(6) }}
+{% endmacro %}
 
-🚧 *Please be aware that the program shown here is provisional and still
-subject to change.* 🚧
+{% macro program_track(tracks, index) %}
+  <b>Track {{index + 1}}: {{tracks[index].title}}</b>
+  <ul>
+    {% for talk in tracks[index].talks %}
+      <li>
+        {{talk.start}}&ndash;{{talk.end}}:
+        <b>{{talk.title}}</b>
 
-- **DPI** below refers to the **Discovery Partners Institute**, on
-  the fourth floor of 200 S. Wacker Drive, Chicago, IL.
-- **IC** below refers to the **Illini Center**, on the 19th
-  floor of 200 S. Wacker Drive, Chicago, IL.
+        <em>{{talk.authors}}</em>
+      </li>
+    {% endfor %}
+  </ul>
+{% endmacro %}
+
+{% macro program_tracks( start, end, tracks,
+    locations=["Discovery Room, DPI", "Orange &amp; Blue Room, IC"]) %}
+  {% for track in tracks %}
+    <tr>
+      <td>{{ start }}&ndash;{{ end }}</td>
+      <td>{{ program_track(tracks, loop.index0) }}</td>
+      <td>{{ locations[loop.index0] }}</td>
+    </tr>
+  {% endfor %}
+{% endmacro %}
+
+{% macro keynote(title, kid, start="8:30", end="9:30", where="Discovery Room, DPI") %}
+  <tr>
+    <td>{{ start }}&ndash;{{ end }}</td>
+    <td>Keynote: <b><a href="#keynote-{{ kid }}">{{ title }}</a></b></td>
+    <td>{{ where }}</td>
+  </tr>
+{% endmacro %}
+
+{% macro program_day1(program) %}
+  <table class="table table-striped">
+    <thead>
+      <td>Time</td>
+      <td>What</td>
+      <td>Where</td>
+    </thead>
+    {{ food("7:30", "8:20", "Continental Breakfast") }}
+    <tr>
+      <td>8:20&ndash;8:30</td>
+      <td>Welcome from the Chairs</td>
+      <td>Discovery Room, DPI</td>
+    </tr>
+    {{ keynote("Closing the Gap between Quantum Algorithms and Machines with Hardware-Software Co-Design", 0) }}
+    {{ food("9:30", "10:00", "Coffee Break") }}
+    {{ program_tracks("10:00", "12:00", program["monday"]["morning"]) }}
+    {{ food("12:00", "13:30", "Lunch", "<a href='attend.html#restaurants'>(Attendees on their own)</a>") }}
+    <tr>
+      <td>12:30&ndash;13:30</td>
+      <td>Steering Committee Meeting</td>
+      <td>Illini Room, IC</td>
+    </tr>
+    {{ program_tracks("13:30", "15:00", program["monday"]["afternoon"]) }}
+    {{ food("15:00", "15:30", "Coffee Break") }}
+    {{ program_tracks("15:30", "17:00", program["monday"]["evening"]) }}
+    {{ food("17:00", "19:00", "<b>Poster Session</b> / Reception", where="Classroom B, DPI") }}
+  </table>
+{% endmacro %}
+{% macro program_day2(program) %}
+  <table class="table table-striped">
+    <thead>
+      <td>Time</td>
+      <td>What</td>
+      <td>Where</td>
+    </thead>
+    {{ food("7:30", "8:25", "Continental Breakfast") }}
+    <tr>
+      <td>8:25&ndash;8:30</td>
+      <td>PACT 2023 in Vienna: A Preview</td>
+      <td>Discovery Room, DPI</td>
+    </tr>
+    {{ keynote("MemComputing: Fundamentals and Applications", 1) }}
+    {{ food("9:30", "10:00", "Coffee Break") }}
+    <tr>
+      <td>10:00&ndash;12:00</td>
+      <td><b>ACM SRC Poster Session</b></td>
+      <td>Classroom B, DPI</td>
+    </tr>
+    {{ program_tracks("10:00", "12:00", program["tuesday"]["morning"], ["Orange &amp; Blue Room, IC"]) }}
+    {{ food("12:00", "13:30", "Lunch", "<a href='attend.html#restaurants'>(Attendees on their own)</a>") }}
+    {{ program_tracks("13:30", "15:00", program["tuesday"]["afternoon"]) }}
+    {{ food("15:00", "15:30", "Coffee Break") }}
+    {{ program_tracks("15:30", "16:30", program["tuesday"]["evening"]) }}
+    <tr>
+      <td>16:30&ndash;17:00</td>
+      <td><p>Travel to boat dock</p>
+        The dock is a <b>30-minute walk from DPI</b>. Please make sure to allow sufficient time.
+      </td>
+      <td>(Attendees on their own)</td>
+    </tr>
+    {{ food("17:00", "20:30", "Banquet / Excursion: Architecture Boat Tour (boarding starts 17:15, vessel departs 17:30 sharp)",
+    "<a href='https://www.google.com/maps/place/Wendella+tours+Docks+3+and+4/@41.8891462,-87.6278298,17z/data=!3m1!4b1!4m5!3m4!1s0x880e2d071c55a07d:0x4832841889121c35!8m2!3d41.8891462!4d-87.6256411'>Wendella West Dock 4</a>") }}
+  </table>
+{% endmacro %}
+{% macro program_day3(program) %}
+  <table class="table table-striped">
+    <thead>
+      <td>Time</td>
+      <td>What</td>
+      <td>Where</td>
+    </thead>
+    {{ food("7:30", "8:30", "Continental Breakfast") }}
+    {{ keynote("AI Acceleration:  Co-optimizing Algorithms, Hardware, and Software", 2) }}
+    <tr>
+      <td>9:30&ndash;10:30</td>
+      <td>Talks: <b>ACM SRC Winners</b></td>
+      <td>Discovery Room, DPI</td>
+    </tr>
+    {{ food("10:30", "11:00", "Coffee Break") }}
+    {{ program_tracks("11:00", "12:30", program["wednesday"]["morning"]) }}
+    <tr>
+      <td>12:30&ndash;12:45</td>
+      <td>Conference Closing</td>
+      <td>Discovery Room, DPI</td>
+    </tr>
+  </table>
+{% endmacro %}
+{% macro tutorial(start, end, tid, title, where, what="Tutorial") %}
+  <tr>
+    <td>{{ start }}&ndash;{{ end }}</td>
+    <td>{{ what }}: <b><a href="#tut{{ tid }}">{{ title }}</a></b></td>
+    <td>{{ where }}</td>
+  </tr>
+{% endmacro %}
+{% macro resume(start, end) %}
+  <tr>
+    <td>{{ start }}&ndash;{{ end }}</td>
+    <td>Tutorials / Workshops resume</td>
+    <td>(locations as above)</td>
+  </tr>
+{% endmacro %}
+{% macro program_tut1() %}
+  <table class="table table-striped">
+    <thead>
+      <td>Time</td>
+      <td>What</td>
+      <td>Where</td>
+    </thead>
+    {{ food("8:00", "9:00", "Continental Breakfast", "Alma Mater Room, IC") }}
+    {{ tutorial("9:00", "10:30", "0-0", "Memory-Centric Computing pt. 1", "Orange & Blue Room, IC") }}
+    {{ food("10:30", "11:00", "Coffee Break", "Alma Mater Room, IC") }}
+    {{ resume("11:00", "12:30") }}
+    {{ food("12:30", "14:00", "Lunch", "<a href='attend.html#restaurants'>(Attendees on their own)</a>") }}
+    {{ tutorial("14:15", "15:45", "0-0", "Memory-Centric Computing pt. 2", "Orange & Blue Room, IC") }}
+    {{ tutorial("14:15", "15:45", "0-1", "SHAD C++ Library", "Discovery Room, DPI") }}
+    {{ tutorial("14:15", "15:45", "0-2", "NVMExplorer", "Classroom A, DPI") }}
+    {{ food("15:45", "16:15", "Coffee Break") }}
+    {{ resume("16:15", "17:45") }}
+  </table>
+{% endmacro %}
+{% macro program_tut2() %}
+  <table class="table table-striped">
+    <thead>
+      <td>Time</td>
+      <td>What</td>
+      <td>Where</td>
+    </thead>
+    {{ food("8:00", "9:00", "Continental Breakfast") }}
+    {{ tutorial("9:00", "10:30", "1-3", "COMET", "Discovery Room, DPI") }}
+    {{ tutorial("9:00", "10:30", "1-1", "SODA Synthesizer, pt. 1", "Orange &amp; Blue Room, IC") }}
+    {{ food("10:30", "11:00", "Coffee Break") }}
+    {{ resume("11:00", "12:30") }}
+    {{ food("12:30", "14:00", "Lunch", "<a href='attend.html#restaurants'>(Attendees on their own)</a>") }}
+    {{ tutorial("14:15", "15:45", "1-2", "SYCL", "Discovery Room, DPI") }}
+    {{ tutorial("14:15", "15:45", "1-1", "SODA Synthesizer, pt. 2", "Orange &amp; Blue Room, IC") }}
+    {{ food("15:45", "16:15", "Coffee Break") }}
+    {{ resume("16:15", "17:45") }}
+  </table>
 {% endmacro %}
