Nix Saturday morning

--- a/macros.jinja
+++ b/macros.jinja
@@ -169,12 +169,7 @@
       <td>What</td>
       <td>Where</td>
     </thead>
-    {{ food("8:00", "9:00", "Continental Breakfast", "Alma Mater Room, IC") }}
-    {{ tutorial("9:00", "10:30", "0-0", "Memory-Centric Computing pt. 1", "Orange & Blue Room, IC") }}
-    {{ food("10:30", "11:00", "Coffee Break", "Alma Mater Room, IC") }}
-    {{ resume("11:00", "12:30") }}
-    {{ food("12:30", "14:00", "Lunch", "<a href='attend.html#restaurants'>(Attendees on their own)</a>") }}
-    {{ tutorial("14:15", "15:45", "0-0", "Memory-Centric Computing pt. 2", "Orange & Blue Room, IC") }}
+    {{ tutorial("14:15", "15:45", "0-0", "Memory-Centric Computing", "Orange & Blue Room, IC") }}
     {{ tutorial("14:15", "15:45", "0-1", "SHAD C++ Library", "Discovery Room, DPI") }}
     {{ tutorial("14:15", "15:45", "0-2", "NVMExplorer", "Classroom A, DPI") }}
     {{ food("15:45", "16:15", "Coffee Break") }}
