--- a/macros.jinja
+++ b/macros.jinja
@@ -18,7 +18,7 @@
 
 {% macro prog_item(start, end, what, where) %}
 <tr>
-  <td>{{ start }}&ndash;{{ end }}</td>
+  <td>{{ start }}{% if end %}&ndash;{{ end }}{% endif %}</td>
   <td>{{ what }}</td>
   <td>{{ where }}</td>
 </tr>
@@ -26,6 +26,10 @@
 
 {% macro food(start, end, what, where="Discovery Room, DPI") %}
   {{ prog_item(start, end, what, where) | indent(6) }}
+{% endmacro %}
+
+{% macro reg_open(start, where="DPI") %}
+  {{ prog_item(start, None, "Registration opens", where) | indent(6) }}
 {% endmacro %}
 
 {% macro program_track(tracks, index) %}
@@ -71,6 +75,7 @@
       <td>What</td>
       <td>Where</td>
     </thead>
+    {{ reg_open("7:30") }}
     {{ food("7:30", "8:20", "Continental Breakfast") }}
     <tr>
       <td>8:20&ndash;8:30</td>
@@ -99,6 +104,7 @@
       <td>What</td>
       <td>Where</td>
     </thead>
+    {{ reg_open("7:30") }}
     {{ food("7:30", "8:25", "Continental Breakfast") }}
     <tr>
       <td>8:25&ndash;8:30</td>
@@ -135,6 +141,7 @@
       <td>What</td>
       <td>Where</td>
     </thead>
+    {{ reg_open("7:30") }}
     {{ food("7:30", "8:30", "Continental Breakfast") }}
     {{ keynote("AI Acceleration:  Co-optimizing Algorithms, Hardware, and Software", 2) }}
     <tr>
@@ -172,6 +179,7 @@
       <td>What</td>
       <td>Where</td>
     </thead>
+    {{ reg_open("13:15") }}
     {{ tutorial("14:15", "15:45", "0-0", "Memory-Centric Computing", "Orange & Blue Room, IC") }}
     {{ tutorial("14:15", "15:45", "0-1", "SHAD C++ Library", "Discovery Room, DPI") }}
     {{ tutorial("14:15", "15:45", "0-2", "NVMExplorer", "Classroom A, DPI") }}
@@ -186,6 +194,7 @@
       <td>What</td>
       <td>Where</td>
     </thead>
+    {{ reg_open("8:00") }}
     {{ food("8:00", "9:00", "Continental Breakfast") }}
     {{ tutorial("9:00", "10:30", "1-3", "COMET", "Discovery Room, DPI") }}
     {{ tutorial("9:00", "10:30", "1-1", "SODA Synthesizer, pt. 1", "Orange &amp; Blue Room, IC") }}
