Expire some more deadlines

--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -17,15 +17,15 @@
         - <del>Round 1 Rebuttal: June 6&ndash;9, 2022</del>
         - <del>Round 2 Rebuttal: July 11&ndash;14, 2022</del>
         - <del>Author Notification: July 29, 2022</del>
-        - Camera Ready Papers: August 26, 2022
+        - <del>Camera Ready Papers: August 26, 2022</del>
         {# - Artifact Submission: August 5, 2022 #}
 
         **Posters:**
 
         - <del>Poster Submission Deadline: September 1, 2022</del>
         - <del>Author Notification: September 15, 2022</del>
-        - Extended Abstract: September 29, 2022
-        - Poster Session: October 10, 2022
+        - <del>Extended Abstract: September 29, 2022</del>
+        - <del>Poster Session: October 10, 2022</del>
 
         **[ACM Student Research Competition](./src.html):**
 
