Expire another deadline

--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -36,7 +36,7 @@
 
         **[Student Travel Awards](attend.html#travel-awards):**
 
-        - Application Deadline: October 5, 2022
+        - <del>Application Deadline: October 5, 2022</del>
 
         **Workshops and Tutorials:**
 
