Show paper numbers in program

--- a/macros.jinja
+++ b/macros.jinja
@@ -44,7 +44,7 @@
     {% for talk in tracks[index].talks %}
       <li>
         {{talk.start}}&ndash;{{talk.end}}:
-        <b>{{talk.title}}</b>
+        <b>{{talk.title}} ({{talk.nr}})</b>
 
         <em>{{talk.authors}}</em>
       </li>
