Adding SRC finalists to program

--- a/macros.jinja
+++ b/macros.jinja
@@ -119,7 +119,7 @@
     <tr>
       <td>10:00&ndash;12:00</td>
       <td><b>ACM SRC Poster Session</b></td>
-      <td>Classroom B, DPI</td>
+      <td>Discovery Room, DPI</td>
     </tr>
     {{ program_tracks("10:00", "12:00", program["tuesday"]["morning"], ["Orange &amp; Blue Room, IC"]) }}
     {{ food("12:00", "13:30", "Lunch", "<a href='attend.html#restaurants'>(Attendees on their own)</a>") }}
@@ -149,7 +149,16 @@
     {{ keynote("AI Acceleration:  Co-optimizing Algorithms, Hardware, and Software", 2) }}
     <tr>
       <td>9:30&ndash;10:30</td>
-      <td>Talks: <b>ACM SRC Winners</b></td>
+      <td>
+        <p>Talks: <b>ACM SRC Finalists</b></p>
+        <ul>
+          <li><b>Understanding Correlated Error Events in Quantum Computers</b> <em>Michael Schleppy &amp; Arpan Gupta</em> (undergrad)</li>
+          <li><b>Independent Tenancy Model</b> <em>Boyang Wang</em> (undergrad)</li>
+          <li><b>A GPU Acceleration Flow for Parallel RTL Simulation and Hardware Testing</b> <em>Dian-Lun Lin</em> (grad)</li>
+          <li><b>SuperB-NoC: A Superconducting Buffering NoC</b> <em>Rhys Gretsch</em> (grad)</li>
+          <li><b>Automatically Translating Non-Affine Codes</b> <em>Avery Laird</em> (grad)</li>
+        </ul>
+      </td>
       <td>Discovery Room, DPI</td>
     </tr>
     {{ food("10:30", "11:00", "Coffee Break") }}
