--- a/template/base-sidebar.html
+++ b/template/base-sidebar.html
@@ -31,8 +31,8 @@
 
         - <del>Abstract Submission Deadline: September 8, 2022</del>
         - <del>Author Notification: September 16, 2022</del>
-        - SRC Poster Session: October 11, 2022
-        - SRC Finalist Presentations: October 12, 2022
+        - <del>SRC Poster Session: October 11, 2022</del>
+        - <del>SRC Finalist Presentations: October 12, 2022</del>
 
         **[Student Travel Awards](attend.html#travel-awards):**
 
